completed user service
